--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   </head>
-  <body>
-    <div id="app"></div>
+  <body class="text-gray-900 font-sans antialiased min-h-screen">
+    <main id="app" class="flex"></main>
+    <div id="modal">
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
