--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="text-gray-900 font-sans antialiased min-h-screen">
     <main id="app" class="flex"></main>
-    <div id="modal">
+    <div id="modals">
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
